after code review 2